add swagger doc to products handler
