# infra/webserver/handlers/product_handlers.go
@@ -22,6 +22,17 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	}
 }
 
+// Create product godoc
+// @Summary 		Create product
+// @Description Create product
+// @Tags 				products
+// @Accept 			json
+// @Produce 		json
+// @Param 			request		body		dto.CreateProductInput		true		"product request"
+// @Success 		201
+// @Failure 		500		{object}		Error
+// @Router 			/products		[post]
+// @Security		ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product)
@@ -45,6 +56,19 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// List products godoc
+// @Summary 		List products
+// @Description Get all products
+// @Tags 				products
+// @Accept 			json
+// @Produce 		json
+// @Param 			page		query			string		false		"page number"
+// @Param 			limit		query			string		false		"limit"
+// @Success 		200			{array}		entities.Product
+// @Failure 		404			{object}	Error
+// @Failure 		500			{object}	Error
+// @Router 			/products		[get]
+// @Security		ApiKeyAuth
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
@@ -71,6 +95,18 @@ func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(products)
 }
 
+// Get product by id godoc
+// @Summary 		Get a product
+// @Description Get product by ID
+// @Tags 				products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id		path		string		true		"product ID" Format(uuid)
+// @Success 		200		{object}		entities.Product
+// @Failure 		404		{object}		Error
+// @Failure 		500		{object}		Error
+// @Router 			/products/{id}		[get]
+// @Security		ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
